[package]
name = "fluxion-rx"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A reactive stream processing library with ordered semantics, friendly interface, and bullet-proof, state-of-the art test coverage and examples"
keywords = ["stream", "reactive", "async", "ordered"]
categories = ["asynchronous", "data-structures"]
# Point to the root documentation file
readme = "../README.md"

[dependencies]
fluxion-core = { workspace = true }
fluxion-stream = { workspace = true }
fluxion-exec = { workspace = true }
fluxion-merge = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
fluxion-test-utils = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
