[package]
name = "fluxion-rx"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A reactive stream processing library with ordered semantics, friendly interface, bullet-proof test coverage, state-of-the art documentation and examples"
keywords = ["stream", "reactive", "async", "ordered"]
categories = ["asynchronous", "data-structures"]
readme = "../README.md"

[dependencies]
fluxion-core = { workspace = true }
fluxion-stream = { workspace = true }
fluxion-exec = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }

[features]
default = ["runtime-tokio"]

# Base capability for no_std
alloc = ["fluxion-core/alloc", "fluxion-stream/alloc", "fluxion-exec/alloc"]

# Tracing support
tracing = ["fluxion-core/tracing", "fluxion-stream/tracing", "fluxion-exec/tracing"]

# Runtime features (each implies alloc)
runtime-tokio = ["alloc", "fluxion-core/runtime-tokio", "fluxion-stream/runtime-tokio", "fluxion-exec/runtime-tokio"]
runtime-smol = ["alloc", "fluxion-core/runtime-smol", "fluxion-stream/runtime-smol", "fluxion-exec/runtime-smol"]
runtime-async-std = ["alloc", "fluxion-core/runtime-async-std", "fluxion-stream/runtime-async-std", "fluxion-exec/runtime-async-std"]

[dev-dependencies]
fluxion-test-utils = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
