[package]
name = "embassy-sensors"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# Independent workspace for no_std target support
[workspace]

[[bin]]
name = "embassy-sensors"
test = false
bench = false

[dependencies]
# Fluxion crates - no_std + Embassy
fluxion-core = { path = "../../fluxion-core", default-features = false, features = ["alloc"] }
fluxion-stream = { path = "../../fluxion-stream", default-features = false, features = ["alloc"] }
fluxion-stream-time = { path = "../../fluxion-stream-time", default-features = false, features = ["alloc", "runtime-embassy"] }

# Embassy runtime
embassy-executor = { version = "0.9.1", features = ["arch-std", "executor-thread"] }
embassy-time = { version = "0.5.0", features = ["std"] }

# Async primitives
futures = { version = "0.3", default-features = false, features = ["alloc"] }
async-channel = { version = "2.3", default-features = false }

# Random number generation for sensor simulation (no_std compatible)
rand = { version = "0.9.2", default-features = false }
rand_chacha = { version = "0.9.0", default-features = false }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
