[package]
name = "embassy-sensors"
version = "0.7.0"
edition = "2021"
license = "Apache-2.0"

# Independent workspace for no_std target support
[workspace]

[[bin]]
name = "embassy-sensors"
test = false
bench = false

[dependencies]
# Fluxion crates - no_std + Embassy
fluxion-core = { path = "../../fluxion-core", default-features = false, features = ["alloc"] }
fluxion-stream = { path = "../../fluxion-stream", default-features = false, features = ["alloc"] }
fluxion-stream-time = { path = "../../fluxion-stream-time", default-features = false, features = ["alloc", "runtime-embassy"] }

# Embassy with proper Cortex-M configuration
embassy-executor = { version = "0.6", features = ["arch-cortex-m", "executor-thread"] }
embassy-time = { version = "0.5", features = ["generic-queue-8", "tick-hz-1_000"] }
embassy-time-driver = { version = "0.2" }

# Async primitives
futures = { version = "0.3", default-features = false, features = ["alloc"] }
async-channel = { version = "2.3", default-features = false }

# Random number generation for sensor simulation (no_std compatible)
rand = { version = "0.9.2", default-features = false }
rand_chacha = { version = "0.9.0", default-features = false }

# Embedded essentials
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
defmt = "1.0.1"
panic-semihosting = "0.6"
embedded-alloc = "0.7.0"

[build-dependencies]
# No build dependencies needed currently

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
