[package]
name = "legacy-integration"
version = "0.3.0"
edition = "2021"

[dependencies]
fluxion-rx = { workspace = true }
fluxion-core = { workspace = true }
fluxion-stream = { workspace = true }
fluxion-exec = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
quick-xml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
fastrand = { workspace = true }

[[bin]]
name = "legacy-integration"
path = "src/main.rs"
