[package]
name = "legacy-integration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
fluxion-rx = { workspace = true }
fluxion-core = { workspace = true }
fluxion-stream = { workspace = true }
fluxion-exec = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
quick-xml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
fastrand = { workspace = true }

[[bin]]
name = "legacy-integration"
path = "src/main.rs"
