[package]
name = "rabbitmq-aggregator-example"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "rabbitmq_aggregator"
path = "src/rabbitmq_aggregator.rs"

[dependencies]
fluxion-rx = { workspace = true }
fluxion-exec = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
