[package]
name = "rabbitmq-aggregator-example"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "rabbitmq_aggregator"
path = "src/rabbitmq_aggregator.rs"

[dependencies]
fluxion-core = { workspace = true, features = ["std"] }
fluxion-rx = { workspace = true }
fluxion-exec = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
